--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,8 @@
 Django==2.2.4
 djangorestframework==3.10.2
+djangorestframework-simplejwt==4.4.0
 gunicorn==19.9.0
 psycopg2==2.8.3
+PyJWT==1.7.1
+pytz==2019.3
+sqlparse==0.3.0
